--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "author": "Sparsh",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "ejs": "^2.7.4",
+    "express": "^4.17.1",
     "express-override": "^0.1.9",
     "express-session": "^1.15.6",
+    "flash": "^1.1.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.4.2",
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
