--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-override": "^0.1.9",
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
+    "kindof": "^2.0.0",
     "method-override": "^3.0.0",
+    "minimist": "^1.2.5",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "nodemon": "^1.19.1",
