--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "nodemon": "^1.19.1",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0",
